--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -257,7 +257,7 @@ akka.http {
       # The frame sent will be the one configured in akka.http.server.websocket.periodic-keep-alive-mode
       # `infinite` by default, or a duration that is the max idle interval after which an keep-alive frame should be sent
       # The value `infinite` means that *no* keep-alive heartbeat will be sent, as: "the allowed idle time is infinite"
-      periodic-keep-alive-max-idle = infinite
+      periodic-keep-alive-max-idle = 1 second
     }
   }
 
