Read token from config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,7 @@
 # Akka HTTP version, checked against the runtime version of Akka HTTP.
 # Loaded from generated conf file.
 include "akka-http-version"
+include "slackbot"
 
 akka.http {
 
